--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.7.2"
+    "@astrojs/image": "^0.12.1",
+    "@astrojs/preact": "^1.2.0",
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.7.2",
+    "preact": "^10.11.3",
+    "tailwindcss": "^3.2.4"
   }
 }
