--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "astro": "^1.7.2",
     "preact": "^10.11.3",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "simple-astro-seo": "^0.1.3"
   }
 }
